organised projects files, added light and dark mode, fixed some bugs.

--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,78 @@
 /*universal styling */ 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mansalva&display=swap');
+:root {
+    --color-bg-main: #121614;
+    --color-bg-containers: #151917;
+    --color-primary: #64895C;
+    --color-text-color: #FFFFFF;
+    --color-bg-button: #3B3B3B;
+}
+.light-mode {
+    --color-bg-main: #F4F4F4;
+    --color-bg-containers: #FFFFFF;
+    --color-primary: #64895C;
+    --color-text-color: #1A1A1A;
+    --color-bg-button: #E0E0E0;
+}
 *{
     margin:0;
     padding:0;
     font-family: 'Inter', Courier, monospace,'sans-serif';
-    color: white;
+    color: var(--color-text-color);
 }
-*, *::before, *::after {
-  box-sizing: border-box;
-}
+
 
 html, body {
     height: 100%;
 }
 main {
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-rows: auto auto;
   gap: 5px;
-  background-color: rgb(18, 22, 20);
-  height:100%;
+  background-color: var(--color-bg-main);
+  height: 100%;
+}
+
+/* Desktop layout */
+@media (min-width: 968px) {
+  main {
+    grid-template-rows: none;
+    grid-template-columns: 30% 70%;
+  }
+  #left-side-container {
+    order: -1;
+  }
 }
 
 #left-side-container {
     border: 1px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; 
-    background-color: rgb(21, 25, 23);
+    justify-content: flex-start;
+    align-items: center; 
+    background-color: var(--color-bg-containers);
     border-radius : 50px;
     padding: 10px;
 }
 #right-side-container {
     border: 1px solid black;
-    background-color: rgb(21, 25, 23);
+    background-color: var(--color-bg-containers);
     border-radius: 50px;
     padding:10px;
+    /*on mobile version, right side should be first(on top of left)*/
+    order: -1;
 }
 /* nav bar styling */
 nav {
     display: flex;
     justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 #nav-bar-ul {
     display: flex;
     flex-direction: row;
     justify-content: center; /* make the links centered !!! */ 
     align-items: center;
-    gap: 10px;
+    gap: 2px;
     font-size: 16px;
     font-weight : normal;
     list-style-type: none;
@@ -65,7 +89,7 @@ ul {
            
 }
 .nav-link-active {
-    background-color: #64895C;
+    background-color: var(--color-primary);
 }
 /*icons styling */
 
@@ -103,7 +127,7 @@ ul {
 } */
 .completed-task {
     text-decoration : line-through;
-    text-decoration-color: #64895C;
+    text-decoration-color: var(--color-primary);
     text-decoration-thickness: 20%;
     cursor: pointer;
 }
@@ -121,7 +145,7 @@ input {
     overflow: hidden;
 }
 #sections-group > section > input:focus {
-    border-bottom: 2px solid #64895C;
+    border-bottom: 2px solid var(--color-primary);
     transition: border-bottom-color 0.5s ease-in;
 }
 #tasks-div {
@@ -132,7 +156,7 @@ input {
 }
 #tasks-div img {
     cursor: pointer;
-    fill: white;
+    /* fill: var(--color-text-color); */
 }
 #timer-display {
     font-size: 110px;
@@ -149,28 +173,28 @@ ul {
     gap: 1rem;
 }
 .button {
-    background-color: #3B3B3B;
+    background-color: var(--color-bg-button);
     padding:0.5rem 1.5rem;
     font-size: 16px;;
     cursor: pointer;
     border-radius: 20px;
 }
 .button:hover, a:hover {
-    background-color: #64895C;
+    background-color: var(--color-primary);
     transition : 1s linear;
-    border-radius: 20px;
 }
 /*progress bar styling */
 #progress-container {
-    width:30%;
+    width:250px;
     background-color:#D9D9D9;
     height:20px;
     border-radius : 20px;
+    border:1px solid black;
     overflow: hidden; /* forces child element (progress-bar) to fit to parent's (container) shape*/ 
 } 
 
 #progress-bar {
-    background-color:#64895C;
+    background-color:var(--color-primary);
     width:0%;
     height:20px;
     transition: width 1s linear;
@@ -178,7 +202,7 @@ ul {
 
 /* settings modal styling */
  #settings-modal {
-   background-color: rgb(31, 31, 31);
+   background-color: var(--color-bg-containers);
     width:400px; 
     padding: 40px;
     top: 50%; 
@@ -221,6 +245,6 @@ section h4 {
 }
 .settings-headers-focus {
     background-color: transparent;
-    border-bottom: 2px solid #64895C;
+    border-bottom: 2px solid var(--color-primary);
     transition: border-bottom-color 0.3s linear;
 }
